force-app/main/default/objects/CS_Round_Robin__c/CS_Round_Robin__c.object-meta.xml
<CustomObject>
    <label>CS Round Robin</label>
    <nameField>
        <label>CS Round Robin Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CS Round Robin</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>