force-app/main/default/objects/CS_Round_Robin__c/fields/Active__c.field-meta.xml
<CustomField>
    <fullName>Active__c</fullName>
    <defaultValue>true</defaultValue>
    <inlineHelpText>Uncheck this box to stop receiving new Assignments</inlineHelpText>
    <label>Active?</label>
    <type>Checkbox</type>
</CustomField>