force-app/main/default/objects/CS_Round_Robin__c/fields/Case_Limit__c.field-meta.xml
<CustomField>
    <fullName>Case_Limit__c</fullName>
    <defaultValue>1</defaultValue>
    <inlineHelpText>Enter the total number of Open Cases this rep can handle</inlineHelpText>
    <label>Case Limit</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>