force-app/main/default/objects/CS_Round_Robin__c/fields/Load__c.field-meta.xml
<CustomField>
    <fullName>Load__c</fullName>
    <formula>Case(  RecordType.Name ,&quot;Success Coach&quot;, (Open_Onboarding_Cases__c + Open_Opportunities_Assigned__c ) / Case_Limit__c, &quot;Implementation Rep&quot;, Open_Activation_Cases__c / Case_Limit__c, &quot;Tech Rep&quot;, Open_Sync_Cases__c / Case_Limit__c,  &quot;ICU Rep&quot;, Open_Targets__c / Target_Limit__c, Open_Activation_Cases__c / Case_Limit__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Load %</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>