force-app/main/default/objects/CS_Round_Robin__c/fields/Name_Safe_ID__c.field-meta.xml
<CustomField>
    <fullName>Name_Safe_ID__c</fullName>
    <formula>CASESAFEID(Name)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Name Safe ID</label>
    <type>Text</type>
</CustomField>