force-app/main/default/objects/CS_Round_Robin__c/fields/Number_of_Cases_Assigned__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Cases_Assigned__c</fullName>
    <inlineHelpText>Number of Cases assigned since Round Robin instituted</inlineHelpText>
    <label>Number of Cases Assigned</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>