force-app/main/default/objects/CS_Round_Robin__c/fields/Open_Activation_Cases__c.field-meta.xml
<CustomField>
    <fullName>Open_Activation_Cases__c</fullName>
    <inlineHelpText>Total Number of Open Activation Cases</inlineHelpText>
    <label>Open Activation Cases</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>