force-app/main/default/objects/CS_Round_Robin__c/fields/Open_Onboarding_Cases__c.field-meta.xml
<CustomField>
    <fullName>Open_Onboarding_Cases__c</fullName>
    <label>Open Onboarding Cases</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>