force-app/main/default/objects/CS_Round_Robin__c/fields/Open_Opportunities_Assigned__c.field-meta.xml
<CustomField>
    <fullName>Open_Opportunities_Assigned__c</fullName>
    <label>Open Opportunities Assigned</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>