force-app/main/default/objects/CS_Round_Robin__c/fields/Open_Sync_Cases__c.field-meta.xml
<CustomField>
    <fullName>Open_Sync_Cases__c</fullName>
    <defaultValue>0</defaultValue>
    <inlineHelpText>Total number of sync cases that are currently open</inlineHelpText>
    <label>Open Sync Cases</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>