force-app/main/default/objects/CS_Round_Robin__c/fields/Open_Targets__c.field-meta.xml
<CustomField>
    <fullName>Open_Targets__c</fullName>
    <label>Open Targets</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>