force-app/main/default/objects/CS_Round_Robin__c/fields/Rep_Name__c.field-meta.xml
<CustomField>
    <fullName>Rep_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Rep Name</label>
    <referenceTo>User</referenceTo>
    <relationshipName>CS_Round_Robin</relationshipName>
    <type>Lookup</type>
</CustomField>