force-app/main/default/objects/CS_Round_Robin__c/fields/Secondary_Sync_Team_to_work__c.field-meta.xml
<CustomField>
    <fullName>Secondary_Sync_Team_to_work__c</fullName>
    <inlineHelpText>This would be a secondary team that the rep could also work on</inlineHelpText>
    <label>Secondary Sync Team to work</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Dentrix 1 Team</fullName>
            </value>
            <value>
                <fullName>Dentrix 2 Team</fullName>
            </value>
            <value>
                <fullName>EagleSoft Team</fullName>
            </value>
            <value>
                <fullName>SCOPE Team</fullName>
            </value>
            <value>
                <fullName>Global Team</fullName>
            </value>
            <value>
                <fullName>Vision Team</fullName>
            </value>
            <value>
                <fullName>Medical 1 Team</fullName>
            </value>
            <value>
                <fullName>Medical 2 Team</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>