force-app/main/default/objects/CS_Round_Robin__c/fields/Target_Limit__c.field-meta.xml
<CustomField>
    <fullName>Target_Limit__c</fullName>
    <defaultValue>1</defaultValue>
    <inlineHelpText>Enter the total number of Open Targets this rep can handle</inlineHelpText>
    <label>Target Limit</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>