force-app/main/default/objects/CS_Round_Robin__c/fields/Team_Assignment__c.field-meta.xml
<CustomField>
    <fullName>Team_Assignment__c</fullName>
    <label>Team Assignment</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Dentrix 1 Team</fullName>
            </value>
            <value>
                <fullName>Dentrix 2 Team</fullName>
            </value>
            <value>
                <fullName>EagleSoft Team</fullName>
            </value>
            <value>
                <fullName>SCOPE Team</fullName>
            </value>
            <value>
                <fullName>Global Team</fullName>
            </value>
            <value>
                <fullName>Vision Team</fullName>
            </value>
            <value>
                <fullName>Medical 1 Team</fullName>
            </value>
            <value>
                <fullName>Medical 2 Team</fullName>
            </value>
            <value>
                <fullName>ML and Major Accounts</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>