force-app/main/default/objects/CS_Round_Robin__c/fields/Vertical_Practice_Management_System__c.field-meta.xml
<CustomField>
    <fullName>Vertical_Practice_Management_System__c</fullName>
    <label>Vertical/Practice Management System</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Dentrix</fullName>
            </value>
            <value>
                <fullName>Vision</fullName>
            </value>
            <value>
                <fullName>Medical</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>