force-app/main/default/objects/CS_Round_Robin__c/recordTypes/ICU_Rep.recordType-meta.xml
<RecordType>
    <fullName>ICU_Rep</fullName>
    <active>true</active>
    <description>Used for ICU Targets</description>
    <label>ICU Rep</label>
</RecordType>