force-app/main/default/objects/CS_Round_Robin__c/recordTypes/Implementation_Rep.recordType-meta.xml
<RecordType>
    <fullName>Implementation_Rep</fullName>
    <active>true</active>
    <description>Used for setting limits for Implementation Reps for Activation Assignments</description>
    <label>Implementation Rep</label>
</RecordType>