force-app/main/default/objects/CS_Round_Robin__c/recordTypes/Scheduler_Rep.recordType-meta.xml
<RecordType>
    <fullName>Scheduler_Rep</fullName>
    <active>true</active>
    <description>Used to round robin the scheduler Rep</description>
    <label>Scheduler Rep</label>
</RecordType>