force-app/main/default/objects/CS_Round_Robin__c/recordTypes/Success_Coach.recordType-meta.xml
<RecordType>
    <fullName>Success_Coach</fullName>
    <active>true</active>
    <label>Success Coach</label>
</RecordType>