force-app/main/default/objects/CS_Round_Robin__c/recordTypes/Team_Assignments.recordType-meta.xml
<RecordType>
    <fullName>Team_Assignments</fullName>
    <active>true</active>
    <description>Used for assigning accounts out to different teams</description>
    <label>Team Assignments</label>
</RecordType>