force-app/main/default/objects/CS_Round_Robin__c/recordTypes/Tech_Rep.recordType-meta.xml
<RecordType>
    <fullName>Tech_Rep</fullName>
    <active>true</active>
    <description>Used to Automate Sync Case assignment</description>
    <label>Tech Rep</label>
</RecordType>