force-app/main/default/objects/CS_Round_Robin__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Name_Safe_ID__c</columns>
    <columns>Rep_Name__c</columns>
    <columns>Team_Assignment__c</columns>
    <columns>Active__c</columns>
    <columns>Case_Limit__c</columns>
    <columns>Load__c</columns>
    <columns>Number_of_Cases_Assigned__c</columns>
    <columns>Open_Activation_Cases__c</columns>
    <columns>Open_Onboarding_Cases__c</columns>
    <columns>RECORDTYPE</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>