force-app/main/default/objects/CS_Round_Robin__c/listViews/All_Active_Success_Coach.listView-meta.xml
<ListView>
    <fullName>All_Active_Success_Coach</fullName>
    <columns>NAME</columns>
    <columns>Rep_Name__c</columns>
    <columns>Team_Assignment__c</columns>
    <columns>Active__c</columns>
    <columns>Open_Onboarding_Cases__c</columns>
    <columns>Open_Opportunities_Assigned__c</columns>
    <columns>Case_Limit__c</columns>
    <columns>Load__c</columns>
    <columns>UPDATEDBY_USER</columns>
    <columns>Name_Safe_ID__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>CS_Round_Robin__c.Success_Coach</value>
    </filters>
    <filters>
        <field>Active__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>All Active Success Coach</label>
</ListView>