force-app/main/default/objects/CS_Round_Robin__c/listViews/All_Active_Tech_Reps.listView-meta.xml
<ListView>
    <fullName>All_Active_Tech_Reps</fullName>
    <columns>NAME</columns>
    <columns>Rep_Name__c</columns>
    <columns>Active__c</columns>
    <columns>Open_Sync_Cases__c</columns>
    <columns>Case_Limit__c</columns>
    <columns>Load__c</columns>
    <columns>UPDATEDBY_USER</columns>
    <columns>Team_Assignment__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>CS_Round_Robin__c.Tech_Rep</value>
    </filters>
    <filters>
        <field>Active__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>All Active Tech Reps</label>
</ListView>