force-app/main/default/objects/CS_Round_Robin__c/listViews/All_ICU_Reps.listView-meta.xml
<ListView>
    <fullName>All_ICU_Reps</fullName>
    <columns>NAME</columns>
    <columns>Rep_Name__c</columns>
    <columns>Open_Targets__c</columns>
    <columns>Target_Limit__c</columns>
    <columns>Load__c</columns>
    <columns>Active__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>CS_Round_Robin__c.ICU_Rep</value>
    </filters>
    <label>All ICU Reps</label>
</ListView>