force-app/main/default/objects/CS_Round_Robin__c/listViews/All_Scheduler_Reps.listView-meta.xml
<ListView>
    <fullName>All_Scheduler_Reps</fullName>
    <columns>NAME</columns>
    <columns>Rep_Name__c</columns>
    <columns>Active__c</columns>
    <columns>Number_of_Cases_Assigned__c</columns>
    <columns>Team_Assignment__c</columns>
    <columns>UPDATEDBY_USER</columns>
    <columns>Load__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>CS_Round_Robin__c.Scheduler_Rep</value>
    </filters>
    <filters>
        <field>Team_Assignment__c</field>
        <operation>notEqual</operation>
        <value>Enterprise Team</value>
    </filters>
    <label>All Scheduler Reps</label>
</ListView>