force-app/main/default/objects/CS_Round_Robin__c/listViews/EagleSoft_Reps.listView-meta.xml
<ListView>
    <fullName>EagleSoft_Reps</fullName>
    <columns>NAME</columns>
    <columns>Rep_Name__c</columns>
    <columns>Team_Assignment__c</columns>
    <columns>Active__c</columns>
    <columns>Open_Activation_Cases__c</columns>
    <columns>Open_Onboarding_Cases__c</columns>
    <columns>Case_Limit__c</columns>
    <columns>Load__c</columns>
    <columns>RECORDTYPE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Team_Assignment__c</field>
        <operation>equals</operation>
        <value>EagleSoft Team</value>
    </filters>
    <label>EagleSoft Reps</label>
</ListView>