force-app/main/default/objects/CS_Round_Robin__c/listViews/Global_Reps.listView-meta.xml
<ListView>
    <fullName>Global_Reps</fullName>
    <columns>NAME</columns>
    <columns>Rep_Name__c</columns>
    <columns>Team_Assignment__c</columns>
    <columns>Active__c</columns>
    <columns>Open_Activation_Cases__c</columns>
    <columns>Case_Limit__c</columns>
    <columns>Load__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>CS_Round_Robin__c.Implementation_Rep</value>
    </filters>
    <filters>
        <field>Team_Assignment__c</field>
        <operation>equals</operation>
        <value>Global Team</value>
    </filters>
    <label>Global Reps</label>
</ListView>